# DeckSend

./: CMakeLists.txt  README.md  bluetooth.c  bluetooth.h  hid.c  hid.h  input.c  input.h  install_decksend.sh  io.github.Mozinho85.DeckSend.desktop  io.github.Mozinho85.DeckSend.json  io.github.Mozinho85.DeckSend.yaml  main.c
